--- a/index.html
+++ b/index.html
@@ -189,11 +189,20 @@
       page.
     </p>
 
-    <h3>Contact Us</h3>
+        <h3>Contact Us</h3>
     <p>
       If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
       me at <a href="mailto:fishingtycooncontact@gmail.com">fishingtycooncontact@gmail.com</a>.
     </p>
+
+    <hr style="margin: 2 em 0; border: none; border-top: 1 px solid #ddd;">
+
+    <p style="text-align: center;">
+      <a href="app-ads.txt" target="_blank" style="color:#1e90ff; font-weight:bold;">
+        View app-ads.txt file
+      </a>
+    </p>
+
   </div>
 </body>
 </html>
